# shared_kernel

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/shared_kernel/: __init__.py
src/shared_kernel/abstractions/: README.md  __init__.py  idefault.py  ifrom.py  iinto.py  itry_from.py  itry_into.py
src/shared_kernel/design_by_contract/: README.md  __init__.py  arguments.py
src/shared_kernel/error_struct/: README.md  __init__.py
src/shared_kernel/functions/: README.md  __init__.py  hash_functions.py
src/shared_kernel/result_type/: README.md  ResultException.py  UnwrapFailedException.py  __init__.py  result.py
tests/: test_argument_exceptions.py  test_error_struct.py  test_hash_combine.py  test_result_type.py
