[project]
name = "shared-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Markus Iorio", email = "mbalzert@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]
